[package]
name = "u2cp437"
version = "0.1.0"
authors = ["Pontus Lundström <pontus.lundstrom@gmail.com>"]
description = "Bare-bones Unicode to code page 437 conversion"
readme = "README.md"
keywords = ["cp437", "convert", "conversion", "no_std"]
categories = ["encoding", "no-std::no-alloc"]
license = "MIT"
repository = "https://github.com/SPuntte/u2cp437"
